Update AudioLive, Version: 180315_144257_release_new-0-gb256a39_bn3

--- a/android/AudioLive/app/build.gradle
+++ b/android/AudioLive/app/build.gradle
@@ -13,9 +13,9 @@ android {
 
         multiDexEnabled true
 
-//        ndk {
-//            abiFilters "armeabi"
-//        }
+        ndk {
+            abiFilters 'armeabi-v7a', 'x86'//, 'arm64-v8a', 'armeabi'
+        }
     }
 
     signingConfigs {
