--- a/android/AudioLive/app/build.gradle
+++ b/android/AudioLive/app/build.gradle
@@ -1,16 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.0"
     defaultConfig {
         applicationId "com.zego.audioroomdemo"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
         multiDexEnabled true
 
         ndk {
@@ -75,10 +80,17 @@ dependencies {
     })
 
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.tencent.bugly:crashreport:2.2.2'
     compile 'com.tencent.bugly:nativecrashreport:3.0'
-    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:support-v4:27.1.0'
+//    compile 'com.blankj:utilcode:1.13.5'
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
+    compile "io.reactivex.rxjava2:rxjava:2.1.12"
+    //
+//    compile 'com.kailashdabhi:om-recorder:1.1.5'
+
+    //
     testCompile 'junit:junit:4.12'
 }
